fix: word wrap and card display fields

--- a/src/bootstrap/theme.less
+++ b/src/bootstrap/theme.less
@@ -7,7 +7,7 @@
 @secondary-color : #1e075f;
 @ternary-color : #4d00b4;
 @quaternary-color: #ead6fe;
-@info-color : #f2e3fe;
+@info-color : @quaternary-color;
 @success-color : @green-6;
 @processing-color : @blue-6;
 @error-color : @red-6;
